# gitmelt

./: .gitignore  Cargo.toml  README.md
.github/workflows/: Create Release.yml  create_release.yml  dev_check.yml  tests_check.yml
src/: cloner.rs  decorator.rs  ingest.rs  main.rs  traversal.rs
src/decorator/: default.rs  file_tree.rs  markdown.rs  mod.rs  xml.rs
tests/: integration_tests.rs
