[package]
name = "gitmelt"
version = "0.1.0"
edition = "2024"
authors = ["qustrolabe <qustrolabe@gmail.com>"]
keywords = ["git", "llm", "digest", "context"]

[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
content_inspector = "0.2.4"
env_logger = "0.11.8"
glob = "0.3.3"
ignore = "0.4.25"
log = "0.4.29"
tempfile = "3.24.0"
tiktoken-rs = "0.9.1"

[dev-dependencies]
tempfile = "3.24.0"
