[package]
name = "gitmelt"
version = "0.4.0"
edition = "2024"
authors = ["qustrolabe <qustrolabe@gmail.com>"]
description = "a tool to turn repository into single file text digest to conveniently feed into LLM"
license = "MIT"
repository = "https://github.com/qustrolabe/gitmelt"
readme = "README.md"
keywords = ["git", "llm", "digest", "context", "cli", "tool"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
content_inspector = "0.2.4"
crossbeam = "0.8.4"
crossbeam-channel = "0.5.15"
env_logger = "0.11.8"
ignore = "0.4.25"
log = "0.4.29"
rayon = "1.11.0"
tempfile = "3.24.0"
tiktoken-rs = "0.9.1"

[dev-dependencies]
tempfile = "3.24.0"
assert_cmd = "2.0.16"
predicates = "3.1.3"

[profile.release]
strip = true
lto = true
codegen-units = 1
